--- a/rps.htm
+++ b/rps.htm
@@ -12,7 +12,7 @@
   <body>
     <div class="container-5">
       <h2>Game : ROCK , PAPER , SCISSOR</h2>
-      <h1>Hellow world</h1>
+      <h1>Hello world</h1>
 
       <div class="flex-fbox-rps" id="flex-box-rps-div">
         <img
